// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._155hghwz,html._155hghwz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_1xii5xj0 f2qp4q18 f2qp4q1b">
+        <div class="ahsupp0 _155hghw7i _155hghw6e _155hghw9q _155hghw8m _155hghw5e f2qp4q18 f2qp4q1b _155hghw32 _155hghw35">
+          <span class="ahsupp0 _155hghw4y f2qp4q0 f2qp4q1 f2qp4q21 b4ix5w4 f2qp4qd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .ahsupp0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .ahsupp0 {
  outline: none;
}
.ahsupp1 {
  display: block;
}
.ahsupp2 {
  line-height: 1;
}
.ahsupp3 {
  list-style: none;
}
.ahsupp4 {
  quotes: none;
}
.ahsupp4:after,
.ahsupp4:before {
  content: "";
}
.ahsupp5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.ahsupp6 {
  -webkit-appearance: none;
  appearance: none;
}
.ahsupp7 {
  background-color: transparent;
}
.ahsupp9 {
  color: inherit;
}
.ahsuppa:disabled {
  opacity: 1;
}
.ahsuppa::-ms-expand {
  display: none;
}
.ahsuppc[type="number"] {
  -moz-appearance: textfield;
}
.ahsuppc[type="number"]::-webkit-inner-spin-button,
.ahsuppc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.ahsuppc::-ms-clear {
  display: none;
}
.ahsuppc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.ahsuppf {
  color: inherit;
  text-decoration: none;
}
._155hghw0 {
  overflow: hidden;
}
._155hghw1 {
  overflow: scroll;
}
._155hghw2 {
  overflow: visible;
}
._155hghw3 {
  overflow: auto;
}
._155hghw4 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
._155hghw5 {
  outline: none;
}
._155hghw6 {
  opacity: 0;
}
._155hghw7 {
  z-index: 0;
}
._155hghw8 {
  z-index: 1;
}
._155hghw9 {
  z-index: 2;
}
._155hghwa {
  z-index: 90;
}
._155hghwb {
  z-index: 100;
}
._155hghwc {
  z-index: 200;
}
._155hghwd {
  z-index: 290;
}
._155hghwe {
  z-index: 300;
}
._155hghwf {
  z-index: 400;
}
._155hghwg {
  cursor: default;
}
._155hghwh {
  cursor: pointer;
}
._155hghwi {
  pointer-events: none;
}
._155hghwj {
  top: 0;
}
._155hghwk {
  bottom: 0;
}
._155hghwl {
  left: 0;
}
._155hghwm {
  right: 0;
}
._155hghwn {
  height: 100%;
}
._155hghwo {
  height: var(--_1fssaa29);
}
._155hghwp {
  width: 100%;
}
._155hghwq {
  width: var(--_1fssaa29);
}
._155hghwr {
  min-width: 0;
}
._155hghws {
  max-width: var(--_1fssaa211);
}
._155hghwt {
  max-width: var(--_1fssaa212);
}
._155hghwu {
  max-width: var(--_1fssaa213);
}
._155hghwv {
  max-width: var(--_1fssaa214);
}
._155hghww {
  transition: var(--_1fssaa25i);
}
._155hghwx {
  transition: var(--_1fssaa25j);
}
._155hghwy:active {
  transform: var(--_1fssaa25k);
}
html._155hghwz ._155hghw11,
html:not(._155hghwz) ._155hghw10 {
  background: var(--_1fssaa21t);
}
html._155hghwz ._155hghw13,
html:not(._155hghwz) ._155hghw12 {
  background: var(--_1fssaa21u);
}
html._155hghwz ._155hghw15,
html:not(._155hghwz) ._155hghw14 {
  background: var(--_1fssaa21v);
}
html._155hghwz ._155hghw17,
html:not(._155hghwz) ._155hghw16 {
  background: var(--_1fssaa21w);
}
html._155hghwz ._155hghw19,
html:not(._155hghwz) ._155hghw18 {
  background: var(--_1fssaa21x);
}
html._155hghwz ._155hghw1b,
html:not(._155hghwz) ._155hghw1a {
  background: var(--_1fssaa21y);
}
html._155hghwz ._155hghw1d,
html:not(._155hghwz) ._155hghw1c {
  background: var(--_1fssaa21z);
}
html._155hghwz ._155hghw1f,
html:not(._155hghwz) ._155hghw1e {
  background: var(--_1fssaa220);
}
html._155hghwz ._155hghw1h,
html:not(._155hghwz) ._155hghw1g {
  background: var(--_1fssaa221);
}
html._155hghwz ._155hghw1j,
html:not(._155hghwz) ._155hghw1i {
  background: var(--_1fssaa222);
}
html._155hghwz ._155hghw1l,
html:not(._155hghwz) ._155hghw1k {
  background: var(--_1fssaa223);
}
html._155hghwz ._155hghw1n,
html:not(._155hghwz) ._155hghw1m {
  background: var(--_1fssaa224);
}
html._155hghwz ._155hghw1p,
html:not(._155hghwz) ._155hghw1o {
  background: var(--_1fssaa225);
}
html._155hghwz ._155hghw1r,
html:not(._155hghwz) ._155hghw1q {
  background: var(--_1fssaa226);
}
html._155hghwz ._155hghw1t,
html:not(._155hghwz) ._155hghw1s {
  background: var(--_1fssaa227);
}
html._155hghwz ._155hghw1v,
html:not(._155hghwz) ._155hghw1u {
  background: var(--_1fssaa228);
}
html._155hghwz ._155hghw1x,
html:not(._155hghwz) ._155hghw1w {
  background: var(--_1fssaa229);
}
html._155hghwz ._155hghw1z,
html:not(._155hghwz) ._155hghw1y {
  background: var(--_1fssaa22a);
}
html._155hghwz ._155hghw21,
html:not(._155hghwz) ._155hghw20 {
  background: var(--_1fssaa22b);
}
html._155hghwz ._155hghw23,
html:not(._155hghwz) ._155hghw22 {
  background: var(--_1fssaa22c);
}
html._155hghwz ._155hghw25,
html:not(._155hghwz) ._155hghw24 {
  background: var(--_1fssaa22d);
}
html._155hghwz ._155hghw27,
html:not(._155hghwz) ._155hghw26 {
  background: var(--_1fssaa22e);
}
html._155hghwz ._155hghw29,
html:not(._155hghwz) ._155hghw28 {
  background: var(--_1fssaa22f);
}
html._155hghwz ._155hghw2b,
html:not(._155hghwz) ._155hghw2a {
  background: var(--_1fssaa22g);
}
html._155hghwz ._155hghw2d,
html:not(._155hghwz) ._155hghw2c {
  background: var(--_1fssaa22h);
}
html._155hghwz ._155hghw2f,
html:not(._155hghwz) ._155hghw2e {
  background: var(--_1fssaa22i);
}
html._155hghwz ._155hghw2h,
html:not(._155hghwz) ._155hghw2g {
  background: var(--_1fssaa22j);
}
html._155hghwz ._155hghw2j,
html:not(._155hghwz) ._155hghw2i {
  background: var(--_1fssaa22k);
}
html._155hghwz ._155hghw2l,
html:not(._155hghwz) ._155hghw2k {
  background: var(--_1fssaa22l);
}
html._155hghwz ._155hghw2n,
html:not(._155hghwz) ._155hghw2m {
  background: var(--_1fssaa22m);
}
html._155hghwz ._155hghw2p,
html:not(._155hghwz) ._155hghw2o {
  background: var(--_1fssaa22n);
}
html._155hghwz ._155hghw2r,
html:not(._155hghwz) ._155hghw2q {
  background: var(--_1fssaa22o);
}
html._155hghwz ._155hghw2t,
html:not(._155hghwz) ._155hghw2s {
  background: var(--_1fssaa22p);
}
html._155hghwz ._155hghw2v,
html:not(._155hghwz) ._155hghw2u {
  background: var(--_1fssaa22q);
}
html._155hghwz ._155hghw2x,
html:not(._155hghwz) ._155hghw2w {
  background: var(--_1fssaa22r);
}
html._155hghwz ._155hghw2z,
html:not(._155hghwz) ._155hghw2y {
  background: var(--_1fssaa22s);
}
html._155hghwz ._155hghw31,
html:not(._155hghwz) ._155hghw30 {
  background: var(--_1fssaa22t);
}
html._155hghwz ._155hghw33,
html:not(._155hghwz) ._155hghw32 {
  background: var(--_1fssaa22u);
}
html._155hghwz ._155hghw35,
html:not(._155hghwz) ._155hghw34 {
  background: var(--_1fssaa22v);
}
html._155hghwz ._155hghw37,
html:not(._155hghwz) ._155hghw36 {
  box-shadow: var(--_1fssaa25l);
}
html._155hghwz ._155hghw39,
html:not(._155hghwz) ._155hghw38 {
  box-shadow: var(--_1fssaa25m);
}
html._155hghwz ._155hghw3b,
html:not(._155hghwz) ._155hghw3a {
  box-shadow: var(--_1fssaa25n);
}
html._155hghwz ._155hghw3d,
html:not(._155hghwz) ._155hghw3c {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2f);
}
html._155hghwz ._155hghw3f,
html:not(._155hghwz) ._155hghw3e {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2g);
}
html._155hghwz ._155hghw3h,
html:not(._155hghwz) ._155hghw3g {
  box-shadow: inset 0 0 0 var(--_1fssaa2z) var(--_1fssaa2f);
}
html._155hghwz ._155hghw3j,
html:not(._155hghwz) ._155hghw3i {
  box-shadow: inset 0 0 0 var(--_1fssaa2z) var(--_1fssaa2g);
}
html._155hghwz ._155hghw3l,
html:not(._155hghwz) ._155hghw3k {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2h);
}
html._155hghwz ._155hghw3n,
html:not(._155hghwz) ._155hghw3m {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2i);
}
html._155hghwz ._155hghw3p,
html:not(._155hghwz) ._155hghw3o {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2j);
}
html._155hghwz ._155hghw3r,
html:not(._155hghwz) ._155hghw3q {
  box-shadow: inset 0 0 0 var(--_1fssaa2z) var(--_1fssaa2j);
}
html._155hghwz ._155hghw3t,
html:not(._155hghwz) ._155hghw3s {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2k);
}
html._155hghwz ._155hghw3v,
html:not(._155hghwz) ._155hghw3u {
  box-shadow: inset 0 0 0 var(--_1fssaa2z) var(--_1fssaa2k);
}
html._155hghwz ._155hghw3x,
html:not(._155hghwz) ._155hghw3w {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2l);
}
html._155hghwz ._155hghw3z,
html:not(._155hghwz) ._155hghw3y {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2n);
}
html._155hghwz ._155hghw41,
html:not(._155hghwz) ._155hghw40 {
  box-shadow: inset 0 0 0 var(--_1fssaa2z) var(--_1fssaa2n);
}
html._155hghwz ._155hghw43,
html:not(._155hghwz) ._155hghw42 {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2o);
}
html._155hghwz ._155hghw45,
html:not(._155hghwz) ._155hghw44 {
  box-shadow: inset 0 0 0 var(--_1fssaa2z) var(--_1fssaa2o);
}
html._155hghwz ._155hghw47,
html:not(._155hghwz) ._155hghw46 {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2p);
}
html._155hghwz ._155hghw49,
html:not(._155hghwz) ._155hghw48 {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2q);
}
html._155hghwz ._155hghw4b,
html:not(._155hghwz) ._155hghw4a {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2r);
}
html._155hghwz ._155hghw4d,
html:not(._155hghwz) ._155hghw4c {
  box-shadow: inset 0 0 0 var(--_1fssaa2z) var(--_1fssaa2r);
}
html._155hghwz ._155hghw4f,
html:not(._155hghwz) ._155hghw4e {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2s);
}
html._155hghwz ._155hghw4h,
html:not(._155hghwz) ._155hghw4g {
  box-shadow: inset 0 0 0 var(--_1fssaa2z) var(--_1fssaa2s);
}
html._155hghwz ._155hghw4j,
html:not(._155hghwz) ._155hghw4i {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2t);
}
html._155hghwz ._155hghw4l,
html:not(._155hghwz) ._155hghw4k {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2u);
}
html._155hghwz ._155hghw4n,
html:not(._155hghwz) ._155hghw4m {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2v);
}
html._155hghwz ._155hghw4p,
html:not(._155hghwz) ._155hghw4o {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2w);
}
html._155hghwz ._155hghw4r,
html:not(._155hghwz) ._155hghw4q {
  box-shadow: inset 0 0 0 var(--_1fssaa2y) var(--_1fssaa2x);
}
html._155hghwz ._155hghw4t,
html:not(._155hghwz) ._155hghw4s {
  box-shadow: 0 0 0 var(--_1fssaa210) var(--_1fssaa2m);
}
._155hghw4u {
  display: none;
}
._155hghw4y {
  display: block;
}
._155hghw52 {
  display: inline;
}
._155hghw56 {
  display: inline-block;
}
._155hghw5a {
  display: flex;
}
._155hghw5e {
  position: relative;
}
._155hghw5i {
  position: absolute;
}
._155hghw5m {
  position: fixed;
}
._155hghw5q {
  border-radius: 0;
}
._155hghw5u {
  border-radius: 9999px;
}
._155hghw5y {
  border-radius: var(--_1fssaa2b);
}
._155hghw62 {
  border-radius: var(--_1fssaa2c);
}
._155hghw66 {
  border-radius: var(--_1fssaa2d);
}
._155hghw6a {
  border-radius: var(--_1fssaa2e);
}
._155hghw6e {
  padding-top: var(--_1fssaa20);
}
._155hghw6i {
  padding-top: var(--_1fssaa21);
}
._155hghw6m {
  padding-top: var(--_1fssaa22);
}
._155hghw6q {
  padding-top: var(--_1fssaa23);
}
._155hghw6u {
  padding-top: var(--_1fssaa24);
}
._155hghw6y {
  padding-top: var(--_1fssaa25);
}
._155hghw72 {
  padding-top: var(--_1fssaa26);
}
._155hghw76 {
  padding-top: var(--_1fssaa27);
}
._155hghw7a {
  padding-top: var(--_1fssaa28);
}
._155hghw7e {
  padding-top: 0;
}
._155hghw7i {
  padding-bottom: var(--_1fssaa20);
}
._155hghw7m {
  padding-bottom: var(--_1fssaa21);
}
._155hghw7q {
  padding-bottom: var(--_1fssaa22);
}
._155hghw7u {
  padding-bottom: var(--_1fssaa23);
}
._155hghw7y {
  padding-bottom: var(--_1fssaa24);
}
._155hghw82 {
  padding-bottom: var(--_1fssaa25);
}
._155hghw86 {
  padding-bottom: var(--_1fssaa26);
}
._155hghw8a {
  padding-bottom: var(--_1fssaa27);
}
._155hghw8e {
  padding-bottom: var(--_1fssaa28);
}
._155hghw8i {
  padding-bottom: 0;
}
._155hghw8m {
  padding-right: var(--_1fssaa20);
}
._155hghw8q {
  padding-right: var(--_1fssaa21);
}
._155hghw8u {
  padding-right: var(--_1fssaa22);
}
._155hghw8y {
  padding-right: var(--_1fssaa23);
}
._155hghw92 {
  padding-right: var(--_1fssaa24);
}
._155hghw96 {
  padding-right: var(--_1fssaa25);
}
._155hghw9a {
  padding-right: var(--_1fssaa26);
}
._155hghw9e {
  padding-right: var(--_1fssaa27);
}
._155hghw9i {
  padding-right: var(--_1fssaa28);
}
._155hghw9m {
  padding-right: 0;
}
._155hghw9q {
  padding-left: var(--_1fssaa20);
}
._155hghw9u {
  padding-left: var(--_1fssaa21);
}
._155hghw9y {
  padding-left: var(--_1fssaa22);
}
._155hghwa2 {
  padding-left: var(--_1fssaa23);
}
._155hghwa6 {
  padding-left: var(--_1fssaa24);
}
._155hghwaa {
  padding-left: var(--_1fssaa25);
}
._155hghwae {
  padding-left: var(--_1fssaa26);
}
._155hghwai {
  padding-left: var(--_1fssaa27);
}
._155hghwam {
  padding-left: var(--_1fssaa28);
}
._155hghwaq {
  padding-left: 0;
}
._155hghwau {
  margin-top: var(--_1fssaa20);
}
._155hghway {
  margin-top: var(--_1fssaa21);
}
._155hghwb2 {
  margin-top: var(--_1fssaa22);
}
._155hghwb6 {
  margin-top: var(--_1fssaa23);
}
._155hghwba {
  margin-top: var(--_1fssaa24);
}
._155hghwbe {
  margin-top: var(--_1fssaa25);
}
._155hghwbi {
  margin-top: var(--_1fssaa26);
}
._155hghwbm {
  margin-top: var(--_1fssaa27);
}
._155hghwbq {
  margin-top: var(--_1fssaa28);
}
._155hghwbu {
  margin-top: 0;
}
._155hghwby {
  margin-bottom: var(--_1fssaa20);
}
._155hghwc2 {
  margin-bottom: var(--_1fssaa21);
}
._155hghwc6 {
  margin-bottom: var(--_1fssaa22);
}
._155hghwca {
  margin-bottom: var(--_1fssaa23);
}
._155hghwce {
  margin-bottom: var(--_1fssaa24);
}
._155hghwci {
  margin-bottom: var(--_1fssaa25);
}
._155hghwcm {
  margin-bottom: var(--_1fssaa26);
}
._155hghwcq {
  margin-bottom: var(--_1fssaa27);
}
._155hghwcu {
  margin-bottom: var(--_1fssaa28);
}
._155hghwcy {
  margin-bottom: 0;
}
._155hghwd2 {
  margin-right: var(--_1fssaa20);
}
._155hghwd6 {
  margin-right: var(--_1fssaa21);
}
._155hghwda {
  margin-right: var(--_1fssaa22);
}
._155hghwde {
  margin-right: var(--_1fssaa23);
}
._155hghwdi {
  margin-right: var(--_1fssaa24);
}
._155hghwdm {
  margin-right: var(--_1fssaa25);
}
._155hghwdq {
  margin-right: var(--_1fssaa26);
}
._155hghwdu {
  margin-right: var(--_1fssaa27);
}
._155hghwdy {
  margin-right: var(--_1fssaa28);
}
._155hghwe2 {
  margin-right: 0;
}
._155hghwe6 {
  margin-left: var(--_1fssaa20);
}
._155hghwea {
  margin-left: var(--_1fssaa21);
}
._155hghwee {
  margin-left: var(--_1fssaa22);
}
._155hghwei {
  margin-left: var(--_1fssaa23);
}
._155hghwem {
  margin-left: var(--_1fssaa24);
}
._155hghweq {
  margin-left: var(--_1fssaa25);
}
._155hghweu {
  margin-left: var(--_1fssaa26);
}
._155hghwey {
  margin-left: var(--_1fssaa27);
}
._155hghwf2 {
  margin-left: var(--_1fssaa28);
}
._155hghwf6 {
  margin-left: 0;
}
._155hghwfa {
  align-items: flex-start;
}
._155hghwfe {
  align-items: center;
}
._155hghwfi {
  align-items: flex-end;
}
._155hghwfm {
  justify-content: flex-start;
}
._155hghwfq {
  justify-content: center;
}
._155hghwfu {
  justify-content: flex-end;
}
._155hghwfy {
  justify-content: space-between;
}
._155hghwg2 {
  flex-direction: row;
}
._155hghwg6 {
  flex-direction: row-reverse;
}
._155hghwga {
  flex-direction: column;
}
._155hghwge {
  flex-direction: column-reverse;
}
._155hghwgi {
  flex-wrap: wrap;
}
._155hghwgm {
  flex-wrap: nowrap;
}
._155hghwgq {
  flex-shrink: 0;
}
._155hghwgu {
  flex-grow: 0;
}
._155hghwgy {
  flex-grow: 1;
}
._155hghwh2 {
  text-align: left;
}
._155hghwh6 {
  text-align: center;
}
._155hghwha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._155hghw4v {
    display: none;
  }
  ._155hghw4z {
    display: block;
  }
  ._155hghw53 {
    display: inline;
  }
  ._155hghw57 {
    display: inline-block;
  }
  ._155hghw5b {
    display: flex;
  }
  ._155hghw5f {
    position: relative;
  }
  ._155hghw5j {
    position: absolute;
  }
  ._155hghw5n {
    position: fixed;
  }
  ._155hghw5r {
    border-radius: 0;
  }
  ._155hghw5v {
    border-radius: 9999px;
  }
  ._155hghw5z {
    border-radius: var(--_1fssaa2b);
  }
  ._155hghw63 {
    border-radius: var(--_1fssaa2c);
  }
  ._155hghw67 {
    border-radius: var(--_1fssaa2d);
  }
  ._155hghw6b {
    border-radius: var(--_1fssaa2e);
  }
  ._155hghw6f {
    padding-top: var(--_1fssaa20);
  }
  ._155hghw6j {
    padding-top: var(--_1fssaa21);
  }
  ._155hghw6n {
    padding-top: var(--_1fssaa22);
  }
  ._155hghw6r {
    padding-top: var(--_1fssaa23);
  }
  ._155hghw6v {
    padding-top: var(--_1fssaa24);
  }
  ._155hghw6z {
    padding-top: var(--_1fssaa25);
  }
  ._155hghw73 {
    padding-top: var(--_1fssaa26);
  }
  ._155hghw77 {
    padding-top: var(--_1fssaa27);
  }
  ._155hghw7b {
    padding-top: var(--_1fssaa28);
  }
  ._155hghw7f {
    padding-top: 0;
  }
  ._155hghw7j {
    padding-bottom: var(--_1fssaa20);
  }
  ._155hghw7n {
    padding-bottom: var(--_1fssaa21);
  }
  ._155hghw7r {
    padding-bottom: var(--_1fssaa22);
  }
  ._155hghw7v {
    padding-bottom: var(--_1fssaa23);
  }
  ._155hghw7z {
    padding-bottom: var(--_1fssaa24);
  }
  ._155hghw83 {
    padding-bottom: var(--_1fssaa25);
  }
  ._155hghw87 {
    padding-bottom: var(--_1fssaa26);
  }
  ._155hghw8b {
    padding-bottom: var(--_1fssaa27);
  }
  ._155hghw8f {
    padding-bottom: var(--_1fssaa28);
  }
  ._155hghw8j {
    padding-bottom: 0;
  }
  ._155hghw8n {
    padding-right: var(--_1fssaa20);
  }
  ._155hghw8r {
    padding-right: var(--_1fssaa21);
  }
  ._155hghw8v {
    padding-right: var(--_1fssaa22);
  }
  ._155hghw8z {
    padding-right: var(--_1fssaa23);
  }
  ._155hghw93 {
    padding-right: var(--_1fssaa24);
  }
  ._155hghw97 {
    padding-right: var(--_1fssaa25);
  }
  ._155hghw9b {
    padding-right: var(--_1fssaa26);
  }
  ._155hghw9f {
    padding-right: var(--_1fssaa27);
  }
  ._155hghw9j {
    padding-right: var(--_1fssaa28);
  }
  ._155hghw9n {
    padding-right: 0;
  }
  ._155hghw9r {
    padding-left: var(--_1fssaa20);
  }
  ._155hghw9v {
    padding-left: var(--_1fssaa21);
  }
  ._155hghw9z {
    padding-left: var(--_1fssaa22);
  }
  ._155hghwa3 {
    padding-left: var(--_1fssaa23);
  }
  ._155hghwa7 {
    padding-left: var(--_1fssaa24);
  }
  ._155hghwab {
    padding-left: var(--_1fssaa25);
  }
  ._155hghwaf {
    padding-left: var(--_1fssaa26);
  }
  ._155hghwaj {
    padding-left: var(--_1fssaa27);
  }
  ._155hghwan {
    padding-left: var(--_1fssaa28);
  }
  ._155hghwar {
    padding-left: 0;
  }
  ._155hghwav {
    margin-top: var(--_1fssaa20);
  }
  ._155hghwaz {
    margin-top: var(--_1fssaa21);
  }
  ._155hghwb3 {
    margin-top: var(--_1fssaa22);
  }
  ._155hghwb7 {
    margin-top: var(--_1fssaa23);
  }
  ._155hghwbb {
    margin-top: var(--_1fssaa24);
  }
  ._155hghwbf {
    margin-top: var(--_1fssaa25);
  }
  ._155hghwbj {
    margin-top: var(--_1fssaa26);
  }
  ._155hghwbn {
    margin-top: var(--_1fssaa27);
  }
  ._155hghwbr {
    margin-top: var(--_1fssaa28);
  }
  ._155hghwbv {
    margin-top: 0;
  }
  ._155hghwbz {
    margin-bottom: var(--_1fssaa20);
  }
  ._155hghwc3 {
    margin-bottom: var(--_1fssaa21);
  }
  ._155hghwc7 {
    margin-bottom: var(--_1fssaa22);
  }
  ._155hghwcb {
    margin-bottom: var(--_1fssaa23);
  }
  ._155hghwcf {
    margin-bottom: var(--_1fssaa24);
  }
  ._155hghwcj {
    margin-bottom: var(--_1fssaa25);
  }
  ._155hghwcn {
    margin-bottom: var(--_1fssaa26);
  }
  ._155hghwcr {
    margin-bottom: var(--_1fssaa27);
  }
  ._155hghwcv {
    margin-bottom: var(--_1fssaa28);
  }
  ._155hghwcz {
    margin-bottom: 0;
  }
  ._155hghwd3 {
    margin-right: var(--_1fssaa20);
  }
  ._155hghwd7 {
    margin-right: var(--_1fssaa21);
  }
  ._155hghwdb {
    margin-right: var(--_1fssaa22);
  }
  ._155hghwdf {
    margin-right: var(--_1fssaa23);
  }
  ._155hghwdj {
    margin-right: var(--_1fssaa24);
  }
  ._155hghwdn {
    margin-right: var(--_1fssaa25);
  }
  ._155hghwdr {
    margin-right: var(--_1fssaa26);
  }
  ._155hghwdv {
    margin-right: var(--_1fssaa27);
  }
  ._155hghwdz {
    margin-right: var(--_1fssaa28);
  }
  ._155hghwe3 {
    margin-right: 0;
  }
  ._155hghwe7 {
    margin-left: var(--_1fssaa20);
  }
  ._155hghweb {
    margin-left: var(--_1fssaa21);
  }
  ._155hghwef {
    margin-left: var(--_1fssaa22);
  }
  ._155hghwej {
    margin-left: var(--_1fssaa23);
  }
  ._155hghwen {
    margin-left: var(--_1fssaa24);
  }
  ._155hghwer {
    margin-left: var(--_1fssaa25);
  }
  ._155hghwev {
    margin-left: var(--_1fssaa26);
  }
  ._155hghwez {
    margin-left: var(--_1fssaa27);
  }
  ._155hghwf3 {
    margin-left: var(--_1fssaa28);
  }
  ._155hghwf7 {
    margin-left: 0;
  }
  ._155hghwfb {
    align-items: flex-start;
  }
  ._155hghwff {
    align-items: center;
  }
  ._155hghwfj {
    align-items: flex-end;
  }
  ._155hghwfn {
    justify-content: flex-start;
  }
  ._155hghwfr {
    justify-content: center;
  }
  ._155hghwfv {
    justify-content: flex-end;
  }
  ._155hghwfz {
    justify-content: space-between;
  }
  ._155hghwg3 {
    flex-direction: row;
  }
  ._155hghwg7 {
    flex-direction: row-reverse;
  }
  ._155hghwgb {
    flex-direction: column;
  }
  ._155hghwgf {
    flex-direction: column-reverse;
  }
  ._155hghwgj {
    flex-wrap: wrap;
  }
  ._155hghwgn {
    flex-wrap: nowrap;
  }
  ._155hghwgr {
    flex-shrink: 0;
  }
  ._155hghwgv {
    flex-grow: 0;
  }
  ._155hghwgz {
    flex-grow: 1;
  }
  ._155hghwh3 {
    text-align: left;
  }
  ._155hghwh7 {
    text-align: center;
  }
  ._155hghwhb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._155hghw4w {
    display: none;
  }
  ._155hghw50 {
    display: block;
  }
  ._155hghw54 {
    display: inline;
  }
  ._155hghw58 {
    display: inline-block;
  }
  ._155hghw5c {
    display: flex;
  }
  ._155hghw5g {
    position: relative;
  }
  ._155hghw5k {
    position: absolute;
  }
  ._155hghw5o {
    position: fixed;
  }
  ._155hghw5s {
    border-radius: 0;
  }
  ._155hghw5w {
    border-radius: 9999px;
  }
  ._155hghw60 {
    border-radius: var(--_1fssaa2b);
  }
  ._155hghw64 {
    border-radius: var(--_1fssaa2c);
  }
  ._155hghw68 {
    border-radius: var(--_1fssaa2d);
  }
  ._155hghw6c {
    border-radius: var(--_1fssaa2e);
  }
  ._155hghw6g {
    padding-top: var(--_1fssaa20);
  }
  ._155hghw6k {
    padding-top: var(--_1fssaa21);
  }
  ._155hghw6o {
    padding-top: var(--_1fssaa22);
  }
  ._155hghw6s {
    padding-top: var(--_1fssaa23);
  }
  ._155hghw6w {
    padding-top: var(--_1fssaa24);
  }
  ._155hghw70 {
    padding-top: var(--_1fssaa25);
  }
  ._155hghw74 {
    padding-top: var(--_1fssaa26);
  }
  ._155hghw78 {
    padding-top: var(--_1fssaa27);
  }
  ._155hghw7c {
    padding-top: var(--_1fssaa28);
  }
  ._155hghw7g {
    padding-top: 0;
  }
  ._155hghw7k {
    padding-bottom: var(--_1fssaa20);
  }
  ._155hghw7o {
    padding-bottom: var(--_1fssaa21);
  }
  ._155hghw7s {
    padding-bottom: var(--_1fssaa22);
  }
  ._155hghw7w {
    padding-bottom: var(--_1fssaa23);
  }
  ._155hghw80 {
    padding-bottom: var(--_1fssaa24);
  }
  ._155hghw84 {
    padding-bottom: var(--_1fssaa25);
  }
  ._155hghw88 {
    padding-bottom: var(--_1fssaa26);
  }
  ._155hghw8c {
    padding-bottom: var(--_1fssaa27);
  }
  ._155hghw8g {
    padding-bottom: var(--_1fssaa28);
  }
  ._155hghw8k {
    padding-bottom: 0;
  }
  ._155hghw8o {
    padding-right: var(--_1fssaa20);
  }
  ._155hghw8s {
    padding-right: var(--_1fssaa21);
  }
  ._155hghw8w {
    padding-right: var(--_1fssaa22);
  }
  ._155hghw90 {
    padding-right: var(--_1fssaa23);
  }
  ._155hghw94 {
    padding-right: var(--_1fssaa24);
  }
  ._155hghw98 {
    padding-right: var(--_1fssaa25);
  }
  ._155hghw9c {
    padding-right: var(--_1fssaa26);
  }
  ._155hghw9g {
    padding-right: var(--_1fssaa27);
  }
  ._155hghw9k {
    padding-right: var(--_1fssaa28);
  }
  ._155hghw9o {
    padding-right: 0;
  }
  ._155hghw9s {
    padding-left: var(--_1fssaa20);
  }
  ._155hghw9w {
    padding-left: var(--_1fssaa21);
  }
  ._155hghwa0 {
    padding-left: var(--_1fssaa22);
  }
  ._155hghwa4 {
    padding-left: var(--_1fssaa23);
  }
  ._155hghwa8 {
    padding-left: var(--_1fssaa24);
  }
  ._155hghwac {
    padding-left: var(--_1fssaa25);
  }
  ._155hghwag {
    padding-left: var(--_1fssaa26);
  }
  ._155hghwak {
    padding-left: var(--_1fssaa27);
  }
  ._155hghwao {
    padding-left: var(--_1fssaa28);
  }
  ._155hghwas {
    padding-left: 0;
  }
  ._155hghwaw {
    margin-top: var(--_1fssaa20);
  }
  ._155hghwb0 {
    margin-top: var(--_1fssaa21);
  }
  ._155hghwb4 {
    margin-top: var(--_1fssaa22);
  }
  ._155hghwb8 {
    margin-top: var(--_1fssaa23);
  }
  ._155hghwbc {
    margin-top: var(--_1fssaa24);
  }
  ._155hghwbg {
    margin-top: var(--_1fssaa25);
  }
  ._155hghwbk {
    margin-top: var(--_1fssaa26);
  }
  ._155hghwbo {
    margin-top: var(--_1fssaa27);
  }
  ._155hghwbs {
    margin-top: var(--_1fssaa28);
  }
  ._155hghwbw {
    margin-top: 0;
  }
  ._155hghwc0 {
    margin-bottom: var(--_1fssaa20);
  }
  ._155hghwc4 {
    margin-bottom: var(--_1fssaa21);
  }
  ._155hghwc8 {
    margin-bottom: var(--_1fssaa22);
  }
  ._155hghwcc {
    margin-bottom: var(--_1fssaa23);
  }
  ._155hghwcg {
    margin-bottom: var(--_1fssaa24);
  }
  ._155hghwck {
    margin-bottom: var(--_1fssaa25);
  }
  ._155hghwco {
    margin-bottom: var(--_1fssaa26);
  }
  ._155hghwcs {
    margin-bottom: var(--_1fssaa27);
  }
  ._155hghwcw {
    margin-bottom: var(--_1fssaa28);
  }
  ._155hghwd0 {
    margin-bottom: 0;
  }
  ._155hghwd4 {
    margin-right: var(--_1fssaa20);
  }
  ._155hghwd8 {
    margin-right: var(--_1fssaa21);
  }
  ._155hghwdc {
    margin-right: var(--_1fssaa22);
  }
  ._155hghwdg {
    margin-right: var(--_1fssaa23);
  }
  ._155hghwdk {
    margin-right: var(--_1fssaa24);
  }
  ._155hghwdo {
    margin-right: var(--_1fssaa25);
  }
  ._155hghwds {
    margin-right: var(--_1fssaa26);
  }
  ._155hghwdw {
    margin-right: var(--_1fssaa27);
  }
  ._155hghwe0 {
    margin-right: var(--_1fssaa28);
  }
  ._155hghwe4 {
    margin-right: 0;
  }
  ._155hghwe8 {
    margin-left: var(--_1fssaa20);
  }
  ._155hghwec {
    margin-left: var(--_1fssaa21);
  }
  ._155hghweg {
    margin-left: var(--_1fssaa22);
  }
  ._155hghwek {
    margin-left: var(--_1fssaa23);
  }
  ._155hghweo {
    margin-left: var(--_1fssaa24);
  }
  ._155hghwes {
    margin-left: var(--_1fssaa25);
  }
  ._155hghwew {
    margin-left: var(--_1fssaa26);
  }
  ._155hghwf0 {
    margin-left: var(--_1fssaa27);
  }
  ._155hghwf4 {
    margin-left: var(--_1fssaa28);
  }
  ._155hghwf8 {
    margin-left: 0;
  }
  ._155hghwfc {
    align-items: flex-start;
  }
  ._155hghwfg {
    align-items: center;
  }
  ._155hghwfk {
    align-items: flex-end;
  }
  ._155hghwfo {
    justify-content: flex-start;
  }
  ._155hghwfs {
    justify-content: center;
  }
  ._155hghwfw {
    justify-content: flex-end;
  }
  ._155hghwg0 {
    justify-content: space-between;
  }
  ._155hghwg4 {
    flex-direction: row;
  }
  ._155hghwg8 {
    flex-direction: row-reverse;
  }
  ._155hghwgc {
    flex-direction: column;
  }
  ._155hghwgg {
    flex-direction: column-reverse;
  }
  ._155hghwgk {
    flex-wrap: wrap;
  }
  ._155hghwgo {
    flex-wrap: nowrap;
  }
  ._155hghwgs {
    flex-shrink: 0;
  }
  ._155hghwgw {
    flex-grow: 0;
  }
  ._155hghwh0 {
    flex-grow: 1;
  }
  ._155hghwh4 {
    text-align: left;
  }
  ._155hghwh8 {
    text-align: center;
  }
  ._155hghwhc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._155hghw4x {
    display: none;
  }
  ._155hghw51 {
    display: block;
  }
  ._155hghw55 {
    display: inline;
  }
  ._155hghw59 {
    display: inline-block;
  }
  ._155hghw5d {
    display: flex;
  }
  ._155hghw5h {
    position: relative;
  }
  ._155hghw5l {
    position: absolute;
  }
  ._155hghw5p {
    position: fixed;
  }
  ._155hghw5t {
    border-radius: 0;
  }
  ._155hghw5x {
    border-radius: 9999px;
  }
  ._155hghw61 {
    border-radius: var(--_1fssaa2b);
  }
  ._155hghw65 {
    border-radius: var(--_1fssaa2c);
  }
  ._155hghw69 {
    border-radius: var(--_1fssaa2d);
  }
  ._155hghw6d {
    border-radius: var(--_1fssaa2e);
  }
  ._155hghw6h {
    padding-top: var(--_1fssaa20);
  }
  ._155hghw6l {
    padding-top: var(--_1fssaa21);
  }
  ._155hghw6p {
    padding-top: var(--_1fssaa22);
  }
  ._155hghw6t {
    padding-top: var(--_1fssaa23);
  }
  ._155hghw6x {
    padding-top: var(--_1fssaa24);
  }
  ._155hghw71 {
    padding-top: var(--_1fssaa25);
  }
  ._155hghw75 {
    padding-top: var(--_1fssaa26);
  }
  ._155hghw79 {
    padding-top: var(--_1fssaa27);
  }
  ._155hghw7d {
    padding-top: var(--_1fssaa28);
  }
  ._155hghw7h {
    padding-top: 0;
  }
  ._155hghw7l {
    padding-bottom: var(--_1fssaa20);
  }
  ._155hghw7p {
    padding-bottom: var(--_1fssaa21);
  }
  ._155hghw7t {
    padding-bottom: var(--_1fssaa22);
  }
  ._155hghw7x {
    padding-bottom: var(--_1fssaa23);
  }
  ._155hghw81 {
    padding-bottom: var(--_1fssaa24);
  }
  ._155hghw85 {
    padding-bottom: var(--_1fssaa25);
  }
  ._155hghw89 {
    padding-bottom: var(--_1fssaa26);
  }
  ._155hghw8d {
    padding-bottom: var(--_1fssaa27);
  }
  ._155hghw8h {
    padding-bottom: var(--_1fssaa28);
  }
  ._155hghw8l {
    padding-bottom: 0;
  }
  ._155hghw8p {
    padding-right: var(--_1fssaa20);
  }
  ._155hghw8t {
    padding-right: var(--_1fssaa21);
  }
  ._155hghw8x {
    padding-right: var(--_1fssaa22);
  }
  ._155hghw91 {
    padding-right: var(--_1fssaa23);
  }
  ._155hghw95 {
    padding-right: var(--_1fssaa24);
  }
  ._155hghw99 {
    padding-right: var(--_1fssaa25);
  }
  ._155hghw9d {
    padding-right: var(--_1fssaa26);
  }
  ._155hghw9h {
    padding-right: var(--_1fssaa27);
  }
  ._155hghw9l {
    padding-right: var(--_1fssaa28);
  }
  ._155hghw9p {
    padding-right: 0;
  }
  ._155hghw9t {
    padding-left: var(--_1fssaa20);
  }
  ._155hghw9x {
    padding-left: var(--_1fssaa21);
  }
  ._155hghwa1 {
    padding-left: var(--_1fssaa22);
  }
  ._155hghwa5 {
    padding-left: var(--_1fssaa23);
  }
  ._155hghwa9 {
    padding-left: var(--_1fssaa24);
  }
  ._155hghwad {
    padding-left: var(--_1fssaa25);
  }
  ._155hghwah {
    padding-left: var(--_1fssaa26);
  }
  ._155hghwal {
    padding-left: var(--_1fssaa27);
  }
  ._155hghwap {
    padding-left: var(--_1fssaa28);
  }
  ._155hghwat {
    padding-left: 0;
  }
  ._155hghwax {
    margin-top: var(--_1fssaa20);
  }
  ._155hghwb1 {
    margin-top: var(--_1fssaa21);
  }
  ._155hghwb5 {
    margin-top: var(--_1fssaa22);
  }
  ._155hghwb9 {
    margin-top: var(--_1fssaa23);
  }
  ._155hghwbd {
    margin-top: var(--_1fssaa24);
  }
  ._155hghwbh {
    margin-top: var(--_1fssaa25);
  }
  ._155hghwbl {
    margin-top: var(--_1fssaa26);
  }
  ._155hghwbp {
    margin-top: var(--_1fssaa27);
  }
  ._155hghwbt {
    margin-top: var(--_1fssaa28);
  }
  ._155hghwbx {
    margin-top: 0;
  }
  ._155hghwc1 {
    margin-bottom: var(--_1fssaa20);
  }
  ._155hghwc5 {
    margin-bottom: var(--_1fssaa21);
  }
  ._155hghwc9 {
    margin-bottom: var(--_1fssaa22);
  }
  ._155hghwcd {
    margin-bottom: var(--_1fssaa23);
  }
  ._155hghwch {
    margin-bottom: var(--_1fssaa24);
  }
  ._155hghwcl {
    margin-bottom: var(--_1fssaa25);
  }
  ._155hghwcp {
    margin-bottom: var(--_1fssaa26);
  }
  ._155hghwct {
    margin-bottom: var(--_1fssaa27);
  }
  ._155hghwcx {
    margin-bottom: var(--_1fssaa28);
  }
  ._155hghwd1 {
    margin-bottom: 0;
  }
  ._155hghwd5 {
    margin-right: var(--_1fssaa20);
  }
  ._155hghwd9 {
    margin-right: var(--_1fssaa21);
  }
  ._155hghwdd {
    margin-right: var(--_1fssaa22);
  }
  ._155hghwdh {
    margin-right: var(--_1fssaa23);
  }
  ._155hghwdl {
    margin-right: var(--_1fssaa24);
  }
  ._155hghwdp {
    margin-right: var(--_1fssaa25);
  }
  ._155hghwdt {
    margin-right: var(--_1fssaa26);
  }
  ._155hghwdx {
    margin-right: var(--_1fssaa27);
  }
  ._155hghwe1 {
    margin-right: var(--_1fssaa28);
  }
  ._155hghwe5 {
    margin-right: 0;
  }
  ._155hghwe9 {
    margin-left: var(--_1fssaa20);
  }
  ._155hghwed {
    margin-left: var(--_1fssaa21);
  }
  ._155hghweh {
    margin-left: var(--_1fssaa22);
  }
  ._155hghwel {
    margin-left: var(--_1fssaa23);
  }
  ._155hghwep {
    margin-left: var(--_1fssaa24);
  }
  ._155hghwet {
    margin-left: var(--_1fssaa25);
  }
  ._155hghwex {
    margin-left: var(--_1fssaa26);
  }
  ._155hghwf1 {
    margin-left: var(--_1fssaa27);
  }
  ._155hghwf5 {
    margin-left: var(--_1fssaa28);
  }
  ._155hghwf9 {
    margin-left: 0;
  }
  ._155hghwfd {
    align-items: flex-start;
  }
  ._155hghwfh {
    align-items: center;
  }
  ._155hghwfl {
    align-items: flex-end;
  }
  ._155hghwfp {
    justify-content: flex-start;
  }
  ._155hghwft {
    justify-content: center;
  }
  ._155hghwfx {
    justify-content: flex-end;
  }
  ._155hghwg1 {
    justify-content: space-between;
  }
  ._155hghwg5 {
    flex-direction: row;
  }
  ._155hghwg9 {
    flex-direction: row-reverse;
  }
  ._155hghwgd {
    flex-direction: column;
  }
  ._155hghwgh {
    flex-direction: column-reverse;
  }
  ._155hghwgl {
    flex-wrap: wrap;
  }
  ._155hghwgp {
    flex-wrap: nowrap;
  }
  ._155hghwgt {
    flex-shrink: 0;
  }
  ._155hghwgx {
    flex-grow: 0;
  }
  ._155hghwh1 {
    flex-grow: 1;
  }
  ._155hghwh5 {
    text-align: left;
  }
  ._155hghwh9 {
    text-align: center;
  }
  ._155hghwhd {
    text-align: right;
  }
}
.b4ix5w4 {
  font-size: var(--b4ix5w0);
  line-height: var(--b4ix5w1);
}
.b4ix5w4:before {
  content: "";
  display: table;
  margin-bottom: var(--b4ix5w2);
}
.b4ix5w4:after {
  content: "";
  display: table;
  margin-top: var(--b4ix5w3);
}
.f2qp4q0 {
  font-family: var(--_1fssaa22w);
}
.f2qp4q1 {
  font-weight: var(--_1fssaa246);
}
.f2qp4q2 {
  font-weight: var(--_1fssaa247);
}
.f2qp4q3 {
  font-weight: var(--_1fssaa248);
}
.f2qp4q4 {
  --b4ix5w0: var(--_1fssaa232);
  --b4ix5w1: var(--_1fssaa233);
  --b4ix5w2: var(--_1fssaa235);
  --b4ix5w3: var(--_1fssaa236);
}
.f2qp4q7 {
  --b4ix5w0: var(--_1fssaa23c);
  --b4ix5w1: var(--_1fssaa23d);
  --b4ix5w2: var(--_1fssaa23f);
  --b4ix5w3: var(--_1fssaa23g);
}
.f2qp4qa {
  --b4ix5w0: var(--_1fssaa23m);
  --b4ix5w1: var(--_1fssaa23n);
  --b4ix5w2: var(--_1fssaa23p);
  --b4ix5w3: var(--_1fssaa23q);
}
.f2qp4qd {
  --b4ix5w0: var(--_1fssaa23w);
  --b4ix5w1: var(--_1fssaa23x);
  --b4ix5w2: var(--_1fssaa23z);
  --b4ix5w3: var(--_1fssaa240);
}
.f2qp4qg {
  font-size: var(--_1fssaa232);
  line-height: var(--_1fssaa233);
}
.f2qp4qh {
  font-size: var(--_1fssaa23c);
  line-height: var(--_1fssaa23d);
}
.f2qp4qi {
  font-size: var(--_1fssaa23m);
  line-height: var(--_1fssaa23n);
}
.f2qp4qj {
  font-size: var(--_1fssaa23w);
  line-height: var(--_1fssaa23x);
}
.f2qp4qk {
  font-weight: var(--_1fssaa25d);
}
.f2qp4ql {
  font-weight: var(--_1fssaa25e);
}
.f2qp4qm {
  --b4ix5w0: var(--_1fssaa249);
  --b4ix5w1: var(--_1fssaa24a);
  --b4ix5w2: var(--_1fssaa24c);
  --b4ix5w3: var(--_1fssaa24d);
}
.f2qp4qp {
  --b4ix5w0: var(--_1fssaa24j);
  --b4ix5w1: var(--_1fssaa24k);
  --b4ix5w2: var(--_1fssaa24m);
  --b4ix5w3: var(--_1fssaa24n);
}
.f2qp4qs {
  --b4ix5w0: var(--_1fssaa24t);
  --b4ix5w1: var(--_1fssaa24u);
  --b4ix5w2: var(--_1fssaa24w);
  --b4ix5w3: var(--_1fssaa24x);
}
.f2qp4qv {
  --b4ix5w0: var(--_1fssaa253);
  --b4ix5w1: var(--_1fssaa254);
  --b4ix5w2: var(--_1fssaa256);
  --b4ix5w3: var(--_1fssaa257);
}
html:not(._155hghwz) .f2qp4q18 {
  --f2qp4qy: var(--_1fssaa219);
  --f2qp4qz: var(--_1fssaa217);
  --f2qp4q10: var(--_1fssaa21d);
  --f2qp4q11: var(--_1fssaa21o);
  --f2qp4q12: var(--_1fssaa21m);
  --f2qp4q13: var(--_1fssaa215);
  --f2qp4q14: var(--_1fssaa21b);
  --f2qp4q15: var(--_1fssaa21k);
  --f2qp4q16: var(--_1fssaa21r);
  --f2qp4q17: var(--_1fssaa21f);
}
html:not(._155hghwz) .f2qp4q19 {
  --f2qp4qy: var(--_1fssaa21a);
  --f2qp4qz: var(--_1fssaa218);
  --f2qp4q10: var(--_1fssaa21e);
  --f2qp4q11: var(--_1fssaa21p);
  --f2qp4q12: var(--_1fssaa21n);
  --f2qp4q13: var(--_1fssaa216);
  --f2qp4q14: var(--_1fssaa21c);
  --f2qp4q15: var(--_1fssaa21l);
  --f2qp4q16: var(--_1fssaa21s);
  --f2qp4q17: var(--_1fssaa21h);
}
html._155hghwz .f2qp4q1a {
  --f2qp4qy: var(--_1fssaa219);
  --f2qp4qz: var(--_1fssaa217);
  --f2qp4q10: var(--_1fssaa21d);
  --f2qp4q11: var(--_1fssaa21o);
  --f2qp4q12: var(--_1fssaa21m);
  --f2qp4q13: var(--_1fssaa215);
  --f2qp4q14: var(--_1fssaa21b);
  --f2qp4q15: var(--_1fssaa21k);
  --f2qp4q16: var(--_1fssaa21r);
  --f2qp4q17: var(--_1fssaa21f);
}
html._155hghwz .f2qp4q1b {
  --f2qp4qy: var(--_1fssaa21a);
  --f2qp4qz: var(--_1fssaa218);
  --f2qp4q10: var(--_1fssaa21e);
  --f2qp4q11: var(--_1fssaa21p);
  --f2qp4q12: var(--_1fssaa21n);
  --f2qp4q13: var(--_1fssaa216);
  --f2qp4q14: var(--_1fssaa21c);
  --f2qp4q15: var(--_1fssaa21l);
  --f2qp4q16: var(--_1fssaa21s);
  --f2qp4q17: var(--_1fssaa21h);
}
html:not(._155hghwz) .f2qp4q1c,
html:not(._155hghwz) .f2qp4q1d,
html:not(._155hghwz) .f2qp4q1e,
html:not(._155hghwz) .f2qp4q1f {
  --f2qp4q15: var(--f2qp4qy);
}
html:not(._155hghwz) .f2qp4q1g,
html:not(._155hghwz) .f2qp4q1h {
  --f2qp4q15: var(--f2qp4qz);
}
html:not(._155hghwz) .f2qp4q1i {
  --f2qp4q15: var(--f2qp4q12);
}
html:not(._155hghwz) .f2qp4q1j {
  --f2qp4q15: var(--f2qp4q10);
}
html:not(._155hghwz) .f2qp4q1k {
  --f2qp4q15: var(--f2qp4q11);
}
html._155hghwz .f2qp4q1l,
html._155hghwz .f2qp4q1m,
html._155hghwz .f2qp4q1n,
html._155hghwz .f2qp4q1o {
  --f2qp4q15: var(--f2qp4qy);
}
html._155hghwz .f2qp4q1p,
html._155hghwz .f2qp4q1q {
  --f2qp4q15: var(--f2qp4qz);
}
html._155hghwz .f2qp4q1r {
  --f2qp4q15: var(--f2qp4q12);
}
html._155hghwz .f2qp4q1s {
  --f2qp4q15: var(--f2qp4q10);
}
html._155hghwz .f2qp4q1t {
  --f2qp4q15: var(--f2qp4q11);
}
.f2qp4q1u {
  color: var(--f2qp4qy);
}
.f2qp4q1v {
  color: var(--f2qp4qz);
}
.f2qp4q1w {
  color: var(--f2qp4q10);
}
.f2qp4q1x {
  color: var(--f2qp4q11);
}
.f2qp4q1y {
  color: var(--f2qp4q12);
}
.f2qp4q1z {
  color: var(--f2qp4q13);
}
.f2qp4q20 {
  color: var(--f2qp4q14);
}
.f2qp4q21 {
  color: var(--f2qp4q15);
}
.f2qp4q22 {
  color: var(--f2qp4q16);
}
.f2qp4q23 {
  color: var(--f2qp4q17);
}
.f2qp4q24 {
  padding-bottom: calc((var(--_1fssaa29) - var(--_1fssaa233)) / 2);
  padding-top: calc((var(--_1fssaa29) - var(--_1fssaa233)) / 2);
}
.f2qp4q25 {
  padding-bottom: calc((var(--_1fssaa29) - var(--_1fssaa23d)) / 2);
  padding-top: calc((var(--_1fssaa29) - var(--_1fssaa23d)) / 2);
}
.f2qp4q26 {
  padding-bottom: calc((var(--_1fssaa29) - var(--_1fssaa23n)) / 2);
  padding-top: calc((var(--_1fssaa29) - var(--_1fssaa23n)) / 2);
}
.f2qp4q27 {
  padding-bottom: calc((var(--_1fssaa29) - var(--_1fssaa23x)) / 2);
  padding-top: calc((var(--_1fssaa29) - var(--_1fssaa23x)) / 2);
}
@media screen and (min-width: 740px) {
  .f2qp4q4 {
    --b4ix5w0: var(--_1fssaa237);
    --b4ix5w1: var(--_1fssaa238);
    --b4ix5w2: var(--_1fssaa23a);
    --b4ix5w3: var(--_1fssaa23b);
  }
  .f2qp4q7 {
    --b4ix5w0: var(--_1fssaa23h);
    --b4ix5w1: var(--_1fssaa23i);
    --b4ix5w2: var(--_1fssaa23k);
    --b4ix5w3: var(--_1fssaa23l);
  }
  .f2qp4qa {
    --b4ix5w0: var(--_1fssaa23r);
    --b4ix5w1: var(--_1fssaa23s);
    --b4ix5w2: var(--_1fssaa23u);
    --b4ix5w3: var(--_1fssaa23v);
  }
  .f2qp4qd {
    --b4ix5w0: var(--_1fssaa241);
    --b4ix5w1: var(--_1fssaa242);
    --b4ix5w2: var(--_1fssaa244);
    --b4ix5w3: var(--_1fssaa245);
  }
  .f2qp4qg {
    font-size: var(--_1fssaa237);
    line-height: var(--_1fssaa238);
  }
  .f2qp4qh {
    font-size: var(--_1fssaa23h);
    line-height: var(--_1fssaa23i);
  }
  .f2qp4qi {
    font-size: var(--_1fssaa23r);
    line-height: var(--_1fssaa23s);
  }
  .f2qp4qj {
    font-size: var(--_1fssaa241);
    line-height: var(--_1fssaa242);
  }
  .f2qp4qm {
    --b4ix5w0: var(--_1fssaa24e);
    --b4ix5w1: var(--_1fssaa24f);
    --b4ix5w2: var(--_1fssaa24h);
    --b4ix5w3: var(--_1fssaa24i);
  }
  .f2qp4qp {
    --b4ix5w0: var(--_1fssaa24o);
    --b4ix5w1: var(--_1fssaa24p);
    --b4ix5w2: var(--_1fssaa24r);
    --b4ix5w3: var(--_1fssaa24s);
  }
  .f2qp4qs {
    --b4ix5w0: var(--_1fssaa24y);
    --b4ix5w1: var(--_1fssaa24z);
    --b4ix5w2: var(--_1fssaa251);
    --b4ix5w3: var(--_1fssaa252);
  }
  .f2qp4qv {
    --b4ix5w0: var(--_1fssaa258);
    --b4ix5w1: var(--_1fssaa259);
    --b4ix5w2: var(--_1fssaa25b);
    --b4ix5w3: var(--_1fssaa25c);
  }
  .f2qp4q24 {
    padding-bottom: calc((var(--_1fssaa29) - var(--_1fssaa238)) / 2);
    padding-top: calc((var(--_1fssaa29) - var(--_1fssaa238)) / 2);
  }
  .f2qp4q25 {
    padding-bottom: calc((var(--_1fssaa29) - var(--_1fssaa23i)) / 2);
    padding-top: calc((var(--_1fssaa29) - var(--_1fssaa23i)) / 2);
  }
  .f2qp4q26 {
    padding-bottom: calc((var(--_1fssaa29) - var(--_1fssaa23s)) / 2);
    padding-top: calc((var(--_1fssaa29) - var(--_1fssaa23s)) / 2);
  }
  .f2qp4q27 {
    padding-bottom: calc((var(--_1fssaa29) - var(--_1fssaa242)) / 2);
    padding-top: calc((var(--_1fssaa29) - var(--_1fssaa242)) / 2);
  }
}
._1xii5xj0 {
  --_1fssaa20: 24px;
  --_1fssaa21: 4px;
  --_1fssaa22: 8px;
  --_1fssaa23: 12px;
  --_1fssaa24: 20px;
  --_1fssaa25: 32px;
  --_1fssaa26: 48px;
  --_1fssaa27: 96px;
  --_1fssaa28: 120px;
  --_1fssaa29: 44px;
  --_1fssaa2a: 4px;
  --_1fssaa2b: 2px;
  --_1fssaa2c: 4px;
  --_1fssaa2d: 6px;
  --_1fssaa2e: 10px;
  --_1fssaa2f: #e60278;
  --_1fssaa2g: #f8b1dc;
  --_1fssaa2h: #fdc221;
  --_1fssaa2i: #fee384;
  --_1fssaa2j: #b91e1e;
  --_1fssaa2k: #fb999a;
  --_1fssaa2l: #838fa5;
  --_1fssaa2m: rgba(159, 176, 245, 0.7);
  --_1fssaa2n: #4964e9;
  --_1fssaa2o: #9fb0f5;
  --_1fssaa2p: #1d559d;
  --_1fssaa2q: #98c9f1;
  --_1fssaa2r: #2e3849;
  --_1fssaa2t: #d2d7df;
  --_1fssaa2s: #fff;
  --_1fssaa2u: #12784f;
  --_1fssaa2v: #8bdec5;
  --_1fssaa2w: #512eaa;
  --_1fssaa2x: #c6acf5;
  --_1fssaa2y: 1px;
  --_1fssaa2z: 2px;
  --_1fssaa210: 3px;
  --_1fssaa211: 400px;
  --_1fssaa212: 660px;
  --_1fssaa213: 940px;
  --_1fssaa214: 1280px;
  --_1fssaa215: #e60278;
  --_1fssaa216: #f8b1dc;
  --_1fssaa217: #723d02;
  --_1fssaa218: #fee384;
  --_1fssaa219: #b91e1e;
  --_1fssaa21a: #fb999a;
  --_1fssaa21b: #4964e9;
  --_1fssaa21c: #9fb0f5;
  --_1fssaa21d: #1d559d;
  --_1fssaa21e: #98c9f1;
  --_1fssaa21f: #4964e9;
  --_1fssaa21h: #9fb0f5;
  --_1fssaa21g: #4964e9;
  --_1fssaa21i: #512eaa;
  --_1fssaa21j: #c6acf5;
  --_1fssaa21k: #2e3849;
  --_1fssaa21l: #fff;
  --_1fssaa21m: #12784f;
  --_1fssaa21n: #8bdec5;
  --_1fssaa21o: #512eaa;
  --_1fssaa21p: #c6acf5;
  --_1fssaa21q: #f57c00;
  --_1fssaa21r: #5a6881;
  --_1fssaa21s: hsla(0, 0%, 100%, 0.65);
  --_1fssaa21t: #f7f8fb;
  --_1fssaa21u: #0e131b;
  --_1fssaa21v: #0d3880;
  --_1fssaa21w: #e60278;
  --_1fssaa21x: #cd026b;
  --_1fssaa21y: #fd0585;
  --_1fssaa21z: #feeffa;
  --_1fssaa220: #fdd7f3;
  --_1fssaa221: #fde3f6;
  --_1fssaa222: #fdc221;
  --_1fssaa223: #fef8de;
  --_1fssaa224: #b91e1e;
  --_1fssaa225: #a31a1a;
  --_1fssaa226: #db1616;
  --_1fssaa227: #ffe3e2;
  --_1fssaa228: #fef3f3;
  --_1fssaa229: #fcdbdb;
  --_1fssaa22a: #fde7e7;
  --_1fssaa22b: #4964e9;
  --_1fssaa22c: #3251e6;
  --_1fssaa22d: #5975ff;
  --_1fssaa22e: #f4f6fe;
  --_1fssaa22f: #dde3fc;
  --_1fssaa22g: #e8ecfd;
  --_1fssaa22h: #1d559d;
  --_1fssaa22i: #e3f2fb;
  --_1fssaa22j: #2e3849;
  --_1fssaa22k: #242c39;
  --_1fssaa22l: #384459;
  --_1fssaa22m: #eaecf1;
  --_1fssaa22n: #f7f8fb;
  --_1fssaa22o: #e6e9f3;
  --_1fssaa22p: #eff1f7;
  --_1fssaa22q: #12784f;
  --_1fssaa22r: #e2f7f1;
  --_1fssaa22s: #512eaa;
  --_1fssaa22t: #f1e8fd;
  --_1fssaa22u: #fff;
  --_1fssaa22v: #1c2330;
  --_1fssaa22w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --_1fssaa22x: 1456;
  --_1fssaa22y: 1900;
  --_1fssaa22z: -500;
  --_1fssaa230: 0;
  --_1fssaa231: 2048;
  --_1fssaa232: 12px;
  --_1fssaa233: 20px;
  --_1fssaa234: 8.5313px;
  --_1fssaa235: -0.4642em;
  --_1fssaa236: -0.4915em;
  --_1fssaa237: 12px;
  --_1fssaa238: 20px;
  --_1fssaa239: 8.5313px;
  --_1fssaa23a: -0.4642em;
  --_1fssaa23b: -0.4915em;
  --_1fssaa23c: 14px;
  --_1fssaa23d: 20px;
  --_1fssaa23e: 9.9531px;
  --_1fssaa23f: -0.3451em;
  --_1fssaa23g: -0.3725em;
  --_1fssaa23h: 14px;
  --_1fssaa23i: 20px;
  --_1fssaa23j: 9.9531px;
  --_1fssaa23k: -0.3451em;
  --_1fssaa23l: -0.3725em;
  --_1fssaa23m: 16px;
  --_1fssaa23n: 24px;
  --_1fssaa23o: 11.375px;
  --_1fssaa23p: -0.3809em;
  --_1fssaa23q: -0.4082em;
  --_1fssaa23r: 16px;
  --_1fssaa23s: 24px;
  --_1fssaa23t: 11.375px;
  --_1fssaa23u: -0.3809em;
  --_1fssaa23v: -0.4082em;
  --_1fssaa23w: 18px;
  --_1fssaa23x: 28px;
  --_1fssaa23y: 12.7969px;
  --_1fssaa23z: -0.4086em;
  --_1fssaa240: -0.436em;
  --_1fssaa241: 18px;
  --_1fssaa242: 28px;
  --_1fssaa243: 12.7969px;
  --_1fssaa244: -0.4086em;
  --_1fssaa245: -0.436em;
  --_1fssaa246: 400;
  --_1fssaa247: 600;
  --_1fssaa248: 700;
  --_1fssaa249: 28px;
  --_1fssaa24a: 36px;
  --_1fssaa24b: 19.9063px;
  --_1fssaa24c: -0.2737em;
  --_1fssaa24d: -0.3011em;
  --_1fssaa24e: 42px;
  --_1fssaa24f: 44px;
  --_1fssaa24g: 29.8594px;
  --_1fssaa24h: -0.1547em;
  --_1fssaa24i: -0.182em;
  --_1fssaa24j: 21px;
  --_1fssaa24k: 32px;
  --_1fssaa24l: 14.9297px;
  --_1fssaa24m: -0.3928em;
  --_1fssaa24n: -0.4201em;
  --_1fssaa24o: 28px;
  --_1fssaa24p: 36px;
  --_1fssaa24q: 19.9063px;
  --_1fssaa24r: -0.2737em;
  --_1fssaa24s: -0.3011em;
  --_1fssaa24t: 21px;
  --_1fssaa24u: 28px;
  --_1fssaa24v: 14.9297px;
  --_1fssaa24w: -0.2975em;
  --_1fssaa24x: -0.3249em;
  --_1fssaa24y: 21px;
  --_1fssaa24z: 28px;
  --_1fssaa250: 14.9297px;
  --_1fssaa251: -0.2975em;
  --_1fssaa252: -0.3249em;
  --_1fssaa253: 18px;
  --_1fssaa254: 28px;
  --_1fssaa255: 12.7969px;
  --_1fssaa256: -0.4086em;
  --_1fssaa257: -0.436em;
  --_1fssaa258: 18px;
  --_1fssaa259: 28px;
  --_1fssaa25a: 12.7969px;
  --_1fssaa25b: -0.4086em;
  --_1fssaa25c: -0.436em;
  --_1fssaa25d: 400;
  --_1fssaa25e: 600;
  --_1fssaa25f: none;
  --_1fssaa25g: 24px;
  --_1fssaa25h: 20px;
  --_1fssaa25i: transform 0.125s ease, opacity 0.125s ease;
  --_1fssaa25j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1fssaa25k: scale(0.95);
  --_1fssaa25l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_1fssaa25m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_1fssaa25n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._1bpoufe6 {
  background: var(--_1bpoufe0);
}
._1bpoufe7 {
  background: var(--_1bpoufe1);
}
._1bpoufe8 {
  background: var(--_1bpoufe2);
}
._1bpoufe9 {
  background: var(--_1bpoufe3);
}
._1bpoufea {
  background: var(--_1bpoufe4);
}
._1bpoufeb {
  background: var(--_1bpoufe5);
}
html:not(._155hghwz) ._1bpoufec {
  --_1bpoufe0: var(--_1fssaa2w);
  --_1bpoufe1: var(--_1fssaa2p);
  --_1bpoufe2: var(--_1fssaa2u);
  --_1bpoufe3: var(--_1fssaa2h);
  --_1bpoufe4: var(--_1fssaa2j);
  --_1bpoufe5: var(--_1fssaa2n);
}
html:not(._155hghwz) ._1bpoufed {
  --_1bpoufe0: var(--_1fssaa2x);
  --_1bpoufe1: var(--_1fssaa2q);
  --_1bpoufe2: var(--_1fssaa2v);
  --_1bpoufe3: var(--_1fssaa2i);
  --_1bpoufe4: var(--_1fssaa2k);
  --_1bpoufe5: var(--_1fssaa2o);
}
html._155hghwz ._1bpoufee {
  --_1bpoufe0: var(--_1fssaa2w);
  --_1bpoufe1: var(--_1fssaa2p);
  --_1bpoufe2: var(--_1fssaa2u);
  --_1bpoufe3: var(--_1fssaa2h);
  --_1bpoufe4: var(--_1fssaa2j);
  --_1bpoufe5: var(--_1fssaa2n);
}
html._155hghwz ._1bpoufef {
  --_1bpoufe0: var(--_1fssaa2x);
  --_1bpoufe1: var(--_1fssaa2q);
  --_1bpoufe2: var(--_1fssaa2v);
  --_1bpoufe3: var(--_1fssaa2i);
  --_1bpoufe4: var(--_1fssaa2k);
  --_1bpoufe5: var(--_1fssaa2o);
}
._1bpoufeg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1bpoufeh {
  width: var(--_1fssaa2e);
}
._1bpoufei {
  width: var(--_1fssaa2a);
}
.lw8dbo0 {
  margin-bottom: -0.1em;
}
.lw8dbo2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
.lw8dbo0 .lw8dbo2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .lw8dbo4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--lw8dbo3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__155hghwz,html.sprinkles_darkMode__155hghwz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__1xii5xj0 typography_lightModeTone_light__f2qp4q18 typography_darkModeTone_dark__f2qp4q1b">
+        <div class="reset_base__ahsupp0 sprinkles_paddingBottom_gutter_mobile__155hghw7i sprinkles_paddingTop_gutter_mobile__155hghw6e sprinkles_paddingLeft_gutter_mobile__155hghw9q sprinkles_paddingRight_gutter_mobile__155hghw8m sprinkles_position_relative_mobile__155hghw5e typography_lightModeTone_light__f2qp4q18 typography_darkModeTone_dark__f2qp4q1b sprinkles_background_surface_lightMode__155hghw32 sprinkles_background_surfaceDark_darkMode__155hghw35">
+          <span class="reset_base__ahsupp0 sprinkles_display_block_mobile__155hghw4y typography_fontFamily__f2qp4q0 typography_fontWeight_regular__f2qp4q1 typography_tone_neutral__f2qp4q21 capsize_capsizeStyle__b4ix5w4 typography_textSize_large__f2qp4qd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
